Updated SSIs and to link to stemma on textual analysis page, fixed overlapping text and centered graphs on textual analysis page

--- a/site/css/brecon.css
+++ b/site/css/brecon.css
@@ -429,3 +429,8 @@ margin-right: auto;
   justify-content: center;
   align-items: center;
 }
+.table{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
